<resources>
    <string name="VisitType">Set visit</string>
    <string name="abbrTelephone">Tel:</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="actionCopy">Duplicate</string>
    <string name="actionSetGoal">Goal</string>
    <string name="actionbar_activity_not_found">Failed to open intent…</string>
    <string name="addCity">Add new city</string>
    <string name="addOrUpdateLocations">Update locations in Territory Helper</string>
    <string name="add_tag">Add new tag</string>
    <string name="allUpToDate">Existing locations are up to date</string>
    <string name="alp_cmd_confirm">Confirm</string>
    <string name="alp_cmd_continue">Continue</string>
    <string name="alp_cmd_forgot_pattern">Forgot pattern?</string>
    <string name="alp_cmd_retry">Retry</string>
    <string name="gps_format">GPS position format</string>
    <string name="gps_format_desc">Show GPS positions as degrees</string>
    <string name="logout_territory_helper">Log out from Territory Helper account</string>
    <string name="prefAddToReport">Add to report</string>
    <string name="prefAddToReportDesc">By default, add return visits, books, etc. to the month report from the person dialog</string>
    <string name="prefAnonymousData">Anonymous data</string>
    <string name="prefAnonymousDataDesc">Send anonymous data of app statistics</string>
    <string name="prefAutoCountStudies">Automatically count studies</string>
    <string name="prefAutoCountStudiesDesc">Automatically add studies to the report</string>
    <string name="prefBackupAddress">Backup address</string>
    <string name="prefBackupAddressDesc">Default address for backup files</string>
    <string name="prefBackupHistory">Backup and history</string>
    <string name="prefClearHistory">Clear search history</string>
    <string name="prefClearHistoryDesc">Remove all saved search history.</string>
    <string name="prefCountStudies">Count studies</string>
    <string name="prefCountStudiesDesc">Only add to report studies whom I have visited this month</string>
    <string name="prefCustomOne">Custom 1</string>
    <string name="prefCustomOneDesc">Show custom value 1 in the report</string>
    <string name="prefCustomReportItems">Custom report items</string>
    <string name="prefCustomThree">Custom 3</string>
    <string name="prefCustomThreeDesc">Show custom value 3 in the report</string>
    <string name="prefCustomTwo">Custom 2</string>
    <string name="prefCustomTwoDesc">Show custom value 2 in the report</string>
    <string name="prefDebugging">Debugging</string>
    <string name="prefDisableIntentDesc">Disable file associations that might conflict with epub or pdf files (restore backup from GMail might stop working).</string>
    <string name="prefDisableIntentDescOff">All file associations are enabled.</string>
    <string name="prefEmailNumbers">Email and numbers</string>
    <string name="prefExternalLocation">External location</string>
    <string name="prefExternalLocationDesc">Change the location of the external storage directory</string>
    <string name="prefFirstWeekDay">First day of week</string>
    <string name="prefFirstWeekDayDesc">Set Sunday as the first day of the week.</string>
    <string name="prefGeneral">General</string>
    <string name="prefLanguageDefault">en</string>
    <string name="prefLanguageTitle">Language</string>
    <string name="prefLockTimeout">Lock timeout</string>
    <string name="prefLockTimeoutDesc">Time before the app is locked.</string>
    <string name="prefMileageInReport">Mileage in report</string>
    <string name="prefMileageInReportDesc">Select when mileage is visible in the report</string>
    <string name="prefMinistryCardsDesc">Select ministry cards that can be displayed.</string>
    <string name="prefMinistryCardsTitle">Ministry cards</string>
    <string name="prefNotifications">Notifications</string>
    <string name="prefNotificationsScheduleDesc">Get a notification for scheduled hours</string>
    <string name="prefNotificationsScheduleDescGeneral">Scheduled hours notification</string>
    <string name="prefNotificationsVisitsDesc">"Get a notification for today's visits"</string>
    <string name="prefNotificationsVisitsDescGeneral">"Visit's notification"</string>
    <string name="prefNumBeforeName">Number before name</string>
    <string name="prefNumBeforeNameDesc">Show number before street name</string>
    <string name="prefOnlySyncWifi">Only sync using WiFi</string>
    <string name="prefOnlySyncWifiDesc">Only sync when connected to WiFi</string>
    <string name="prefPasswordProtectDesc">Protect app with a password.</string>
    <string name="prefPasswordProtectHeader">Password protection</string>
    <string name="prefPublisherName">Name of publisher</string>
    <string name="prefPublisherNameDesc">The name of the publisher to be included in the report</string>
    <string name="prefRemoveBackup">Clear old backup files</string>
    <string name="prefRemoveBackupDesc">Removes all backup files except the most recent.</string>
    <string name="prefReportAddress">Report address</string>
    <string name="prefReportAddressDesc">Default address for sending monthly report</string>
    <string name="prefReportAddressTitle">Report email recipient</string>
    <string name="prefReportNumber">Report number</string>
    <string name="prefReportNumberDesc">Default number to send report to</string>
    <string name="prefReportNumberTitle">Report SMS recipient</string>
    <string name="prefReportReminder">Enable reminder</string>
    <string name="prefReportReminderDesc">Enable or disable a reminder to send in the service report</string>
    <string name="prefResetAccount">Reset Google account</string>
    <string name="prefResetAccountDesc">Reset which Google account to use</string>
    <string name="prefResetDlgs">"Reset all Don't-show-this-again dialogs"</string>
    <string name="prefResetDlgsTitle">Reset dialogs</string>
    <string name="prefSelectLang">Change the application language</string>
    <string name="prefSendErrorLogs">Send error logs</string>
    <string name="prefSendErrorLogsDesc">Send latest error logs by e-mail.</string>
    <string name="prefServiceReport">Service report</string>
    <string name="prefServiceReportDesc">Settings for the service report</string>
    <string name="prefSetupEmailSMS">Setup email addresses and SMS numbers</string>
    <string name="prefShowComment">Show comment dialog</string>
    <string name="prefShowCommentDesc">Show comment dialog when setting status Not interested, No time, etc.</string>
    <string name="prefShowVideo">Show DVDs in report</string>
    <string name="prefShowVideoDesc">Show placed DVDs in the report</string>
    <string name="prefSubjectPrefix">Subject prefix</string>
    <string name="prefSubjectPrefixDesc">The prefix for the subject line when sending monthly reports as e-mail</string>
    <string name="prefSyncDevices">How to sync</string>
    <string name="prefSyncDevicesDesc">How to sync devices</string>
    <string name="prefSyncFreq">Sync frequency</string>
    <string name="prefSyncFreqDesc">How often the device should sync</string>
    <string name="prefTimeFormat">Time format</string>
    <string name="prefTimeFormatDesc">Set time format to use, hours and minutes or decimal</string>
    <string name="prefUseHapticFeedback">Use haptic feedback</string>
    <string name="prefUseHapticFeedbackDesc">Use haptic feedback for password dialog</string>
    <string name="prefUseOSM">Use Open Street Map</string>
    <string name="prefUseOSMDesc">Use Open Street Map instead of Google Maps</string>
    <string name="prefVideoPhoneOff">"Don't show video phone in person information"</string>
    <string name="prefVideoPhoneOn">Show video phone in person information</string>
    <string name="pref_report_details">Select level of detail for your ministry report</string>
    <string name="prefsDisableIntent">Disable file associations</string>
    <string name="prefsFirstFloor">First floor</string>
    <string name="prefsFirstFloorDesc">Set first floor in apartment building</string>
    <string name="prefsMileagePrefs">Mileage preferences</string>
    <string name="prefsSendMileage">Send mileage info</string>
    <string name="prefsSendMileageDesc">Send mileage information with monthly report</string>
    <string name="prefsSyncSummary">Syncing between devices</string>
    <string name="prefsSyncing">Syncing</string>
    <string name="prefsUseKilometers">Use kilometers</string>
    <string name="prefsUseKilometersDesc">Use kilometers for mileage</string>
    <string name="report_details">Report details</string>
    <string name="show_timer_card">Show the service timer card</string>
    <string name="strByAddress">By Address</string>
    <string name="strByBestTime">By Best Time</string>
    <string name="strByCity">By City</string>
    <string name="strByDate">By Date</string>
    <string name="strByName">By Name</string>
    <string name="strByNeighbourhood">By Neighborhood</string>
    <string name="strByPriority">By Priority</string>
    <string name="strByTimeForVisit">By Time For Visit</string>
    <string name="strDay">Afternoon</string>
    <string name="strEvening">Evening</string>
    <string name="strFriday">Friday</string>
    <string name="strHowToSort">Select how to sort</string>
    <string name="strMonday">Monday</string>
    <string name="strMorning">Morning</string>
    <string name="strNoGrouping">No grouping</string>
    <string name="strSaturday">Saturday</string>
    <string name="strSelectHowToGroup">Select how to group data</string>
    <string name="strServiceTimerShort">Service timer</string>
    <string name="strSortDecreasing">Sort decreasing</string>
    <string name="strStartHighestFloor">Start from highest floor</string>
    <string name="strStartHighestFloorDesc">Start buildings from highest floor</string>
    <string name="strSunday">Sunday</string>
    <string name="strThursday">Thursday</string>
    <string name="strTuesday">Tuesday</string>
    <string name="strVideoPhone">Video phone</string>
    <string name="strWednesday">Wednesday</string>
    <string name="strWeekend">Weekend</string>
</resources>