<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:maxWidth="300.0dip" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strHowToSort" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true" fontPath="fonts/OpenSans-Bold.ttf" style="@style/TagdialogText" />
        <View android:id="@id/separator" android:layout_below="@id/textView" style="@style/BlueSeparatorBar" />
        <RadioGroup android:id="@id/radioGroupSort" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/separator">
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdSortAddress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strByAddress" style="@style/TagdialogText" />
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdSortDate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strByDate" style="@style/TagdialogText" />
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdSortName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/strByName" style="@style/TagdialogText" />
        </RadioGroup>
        <CheckBox android:textAppearance="?android:textAppearanceMedium" android:id="@id/checkDecreasing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strSortDecreasing" android:layout_below="@id/radioGroupSort" style="@style/TagdialogText" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:id="@id/textGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/strSelectHowToGroup" android:layout_below="@id/checkDecreasing" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" fontPath="fonts/OpenSans-Bold.ttf" style="@style/TagdialogText" />
        <View android:id="@id/separator2" android:layout_below="@id/textGroup" style="@style/BlueSeparatorBar" />
        <RadioGroup android:id="@id/radioGroupGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/separator2">
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdGroupNeighborhood" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/strByNeighbourhood" style="@style/TagdialogText" />
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdGroupCity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strByCity" style="@style/TagdialogText" />
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdGroupDate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strByDate" style="@style/TagdialogText" />
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdGroupPriority" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strByPriority" style="@style/TagdialogText" />
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdGroupVisitTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strByTimeForVisit" style="@style/TagdialogText" />
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdGroupBestTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strByBestTime" style="@style/TagdialogText" />
            <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/rdNoGrouping" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strNoGrouping" style="@style/TagdialogText" />
        </RadioGroup>
    </RelativeLayout>
</ScrollView>