<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="5.0dip" android:paddingEnd="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/visitTimeLayout" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <LinearLayout android:orientation="horizontal" android:id="@id/layoutCbV1" android:paddingLeft="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="3.0dip">
            <CheckBox android:id="@id/chMorning" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strMorning" android:layout_weight="1.0" />
            <CheckBox android:id="@id/chDay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strDay" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/layoutCbV2" android:paddingLeft="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layoutCbV1" android:paddingStart="3.0dip">
            <CheckBox android:id="@id/chEvening" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strEvening" android:layout_weight="1.0" />
            <CheckBox android:id="@id/chWeekend" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strWeekend" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:id="@id/separator15" android:layout_below="@id/layoutCbV2" style="@style/GraySeparatorBar" />
        <LinearLayout android:orientation="horizontal" android:id="@id/layoutCbV3" android:paddingLeft="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/separator15" android:paddingStart="3.0dip">
            <CheckBox android:id="@id/chMonday" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strMonday" android:layout_weight="1.0" />
            <CheckBox android:id="@id/chFriday" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strFriday" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/layoutCbV4" android:paddingLeft="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layoutCbV3" android:paddingStart="3.0dip">
            <CheckBox android:id="@id/chTuesday" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strTuesday" android:layout_weight="1.0" />
            <CheckBox android:id="@id/chSaturday" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strSaturday" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/layoutCbV5" android:paddingLeft="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layoutCbV4" android:paddingStart="3.0dip">
            <CheckBox android:id="@id/chWednesday" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strWednesday" android:layout_weight="1.0" />
            <CheckBox android:id="@id/chSunday" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/strSunday" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/layoutCbV6" android:paddingLeft="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layoutCbV5" android:paddingStart="3.0dip">
            <CheckBox android:id="@id/chThursday" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/strThursday" android:layout_weight="1.0" />
        </LinearLayout>
        <include android:paddingTop="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layoutCbV6" layout="@layout/action_setcancel" />
    </RelativeLayout>
</ScrollView>